# tpk4128-industrial-mechatronics

./: LICENSE  README.md  setup.py
.github/workflows/: jekyll-gh-pages.yml
docs/: Chapter10.md  Chapter2.md  Chapter3.md  Chapter4.md  Chapter5.md  Chapter6.md  Chapter7.md  Chapter8.md  Chapter9.md  Preface.md  README.md  chapter1.md
ros/: README.md
ros/tpk4128/: CMakeLists.txt  package.xml
ros/tpk4128/launch/: talker_listener.launch
ros/tpk4128/scripts/: listener.py  talker.py
ros2/: README.md
scripts/: echo_client.py  echo_server.py  run_client.py  run_client_opencv.py  run_server.py  run_server_opencv.py
tpk4128/: camera.py  camera_opencv.py  cameracapture.py  client.py  server.py
