<?xml version="1.0"?>
<package format="2">
  <name>tpk4128</name>
  <version>0.0.0</version>
  <description>The tpk4128 package</description>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <license>MIT</license>
  <url type="website">www.ntnu.no/studier/emner/TPK4128</url>
  <author email="lars.tingelstad@ntnu.no">Lars Tingelstad</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
